package org.example.utils

class Location(val startLine: Int, val startColumn: Int, val endLine: Int, val endColumn: Int) {

}
