@startuml

class Program {
    List<ASTNode> statements
}

interface ASTNode {
    + accept(Visitor visitor)
}

Program --> ASTNode

class VariableDeclaration implements ASTNode {
    String type
    Location location
    List<VariableDeclarator> declarators
    String kind
}

VariableDeclaration o-- VariableDeclarator
VariableDeclaration o-- Location

class VariableDeclarator {
    String type
    Location location
    Identifier id
    Expression init
}

VariableDeclarator o-- Identifier
VariableDeclarator o-- Expression

class Location {
    int StartLine
    int StartColumn
    int EndLine
    int EndColumn
}

class Identifier implements Expression {
    String type
    Location location
    String name
}

interface Expression {
    String type
    Location location
}

class BinaryExpression implements Expression {
    String type
    Location location
    Expression left
    Expression right
    String operator
}

BinaryExpression o-- Expression

class Literal implements Expression {
    String type
    Location location
    String value
}

@enduml